--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,10 +1,7 @@
 services:
   api:
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile.multi
-    #   target: api-build
-    image: ghcr.io/danny-avila/librechat-dev-api:latest
+    build:
+      context: .
     container_name: LibreChat-API
     ports:
       - 3080:3080
