--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,20 @@
 
 services:
   api:
+    build:
+      context: .
+      dockerfile: Dockerfile.multi
     container_name: LibreChat
     ports:
       - "${PORT}:${PORT}"
     depends_on:
-      - mongodb
       - rag_api
-    image: ghcr.io/danny-avila/librechat-dev:latest
     restart: always
     user: "${UID}:${GID}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    environment:
-      - HOST=0.0.0.0
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
-      - MEILI_HOST=http://meilisearch:7700
-      - RAG_PORT=${RAG_PORT:-8000}
-      - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
+    env_file:
+      - .env
     volumes:
       - type: bind
         source: ./.env
@@ -27,14 +24,6 @@ services:
       - ./images:/app/client/public/images
       - ./uploads:/app/uploads
       - ./logs:/app/api/logs
-  mongodb:
-    container_name: chat-mongodb
-    image: mongo
-    restart: always
-    user: "${UID}:${GID}"
-    volumes:
-      - ./data-node:/data/db
-    command: mongod --noauth
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.12.3
@@ -67,6 +56,8 @@ services:
       - vectordb
     env_file:
       - .env
+    ports:
+      - "8000:8000"
 
 volumes:
   pgdata2:
