--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,24 @@
 
 services:
   api:
+    container_name: api_local
     build:
       context: .
-      dockerfile: Dockerfile.multi
-    container_name: LibreChat
+      dockerfile: Dockerfile
     ports:
       - "${PORT}:${PORT}"
     depends_on:
-      - rag_api
+      - rag_api_local
     restart: always
     user: "${UID}:${GID}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    env_file:
-      - .env
+    environment:
+      - HOST=0.0.0.0
+      - MONGO_URI=${MONGO_URI}
+      - MEILI_HOST=http://meilisearch:7700
+      - RAG_PORT=${RAG_PORT:-8000}
+      - RAG_API_URL=${RAG_API_URL}
     volumes:
       - type: bind
         source: ./.env
@@ -24,17 +28,6 @@ services:
       - ./images:/app/client/public/images
       - ./uploads:/app/uploads
       - ./logs:/app/api/logs
-  meilisearch:
-    container_name: chat-meilisearch
-    image: getmeili/meilisearch:v1.12.3
-    restart: always
-    user: "${UID}:${GID}"
-    environment:
-      - MEILI_HOST=http://meilisearch:7700
-      - MEILI_NO_ANALYTICS=true
-      - MEILI_MASTER_KEY=${MEILI_MASTER_KEY}
-    volumes:
-      - ./meili_data_v1.12:/meili_data
   vectordb:
     container_name: vectordb
     image: ankane/pgvector:latest
@@ -45,19 +38,24 @@ services:
     restart: always
     volumes:
       - pgdata2:/var/lib/postgresql/data
-  rag_api:
-    container_name: rag_api
-    image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
-    environment:
-      - DB_HOST=vectordb
-      - RAG_PORT=${RAG_PORT:-8000}
-    restart: always
-    depends_on:
-      - vectordb
-    env_file:
-      - .env
+  rag_api_local:
+    container_name: rag_api_local
+    build:
+      context: ../rag_api
+      dockerfile: Dockerfile
+    volumes:
+      - ../rag_api:/app
     ports:
       - "8000:8000"
+    environment:
+      DB_HOST: vectordb
+      RAG_PORT: ${RAG_PORT:-8000}
+    env_file:
+      - .env
+    command: uvicorn main:app --reload --host 0.0.0.0 --port ${RAG_PORT:-8000}
+    depends_on:
+      - vectordb
+    restart: always
 
 volumes:
   pgdata2:
