--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,12 +1,10 @@
 services:
   api:
-    build:
-      context: .
     container_name: LibreChat-API
+    image: ghcr.io/miajohansson9/meld-hub:latest
     ports:
       - 3080:3080
     depends_on:
-      - mongodb
       - rag_api
     restart: always
     extra_hosts:
@@ -16,7 +14,7 @@ services:
     environment:
       - HOST=0.0.0.0
       - NODE_ENV=production
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MONGO_URI=${MONGO_URI}
       - MEILI_HOST=http://meilisearch:7700
       - RAG_PORT=${RAG_PORT:-8000}
       - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
@@ -27,40 +25,6 @@ services:
       - ./images:/app/client/public/images
       - ./uploads:/app/uploads
       - ./logs:/app/api/logs
-
-  client:
-    image: nginx:1.27.0-alpine
-    container_name: LibreChat-NGINX
-    ports:
-      - 80:80
-      - 443:443
-    depends_on:
-      - api
-    restart: always
-    volumes:
-      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
-  mongodb:
-    container_name: chat-mongodb
-    # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
-    #   - 27018:27017
-    image: mongo
-    restart: always
-    volumes:
-      - ./data-node:/data/db
-    command: mongod --noauth
-  meilisearch:
-    container_name: chat-meilisearch
-    image: getmeili/meilisearch:v1.12.3
-    restart: always
-    # ports: # Uncomment this to access meilisearch from outside docker
-    #   - 7700:7700 # if exposing these ports, make sure your master key is not the default value
-    env_file:
-      - .env
-    environment:
-      - MEILI_HOST=http://meilisearch:7700
-      - MEILI_NO_ANALYTICS=true
-    volumes:
-      - ./meili_data_v1.12:/meili_data
   vectordb:
     image: ankane/pgvector:latest
     environment:
@@ -71,7 +35,7 @@ services:
     volumes:
       - pgdata2:/var/lib/postgresql/data
   rag_api:
-    image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
+    image: ghcr.io/miajohansson9/meld-rag-api:latest
     environment:
       - DB_HOST=vectordb
       - RAG_PORT=${RAG_PORT:-8000}
