--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,12 @@
 
 services:
   api:
-    container_name: api_local
-    build:
-      context: .
-      dockerfile: Dockerfile
+    container_name: meld_hub
+    image: ghcr.io/miajohansson9/meld-hub:latest
     ports:
       - "${PORT}:${PORT}"
     depends_on:
-      - rag_api_local
+      - rag_api
     restart: always
     user: "${UID}:${GID}"
     extra_hosts:
@@ -38,24 +36,17 @@ services:
     restart: always
     volumes:
       - pgdata2:/var/lib/postgresql/data
-  rag_api_local:
-    container_name: rag_api_local
-    build:
-      context: ../rag_api
-      dockerfile: Dockerfile
-    volumes:
-      - ../rag_api:/app
-    ports:
-      - "8000:8000"
+  rag_api:
+    container_name: rag_api
+    image: ghcr.io/miajohansson9/meld-rag-api:latest
     environment:
-      DB_HOST: vectordb
-      RAG_PORT: ${RAG_PORT:-8000}
-    env_file:
-      - .env
-    command: uvicorn main:app --reload --host 0.0.0.0 --port ${RAG_PORT:-8000}
+      - DB_HOST=vectordb
+      - RAG_PORT=${RAG_PORT:-8000}
+    restart: always
     depends_on:
       - vectordb
-    restart: always
+    env_file:
+      - .env
 
 volumes:
   pgdata2:
