--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,5 +1,6 @@
 services:
   api:
+    platform: linux/amd64
     container_name: LibreChat-API
     image: ghcr.io/miajohansson9/meld-hub:latest
     ports:
@@ -26,7 +27,8 @@ services:
       - ./uploads:/app/uploads
       - ./logs:/app/api/logs
   vectordb:
-    image: ankane/pgvector:latest
+    platform: linux/amd64
+    image: pgvector/pgvector:pg16
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
@@ -35,6 +37,7 @@ services:
     volumes:
       - pgdata2:/var/lib/postgresql/data
   rag_api:
+    platform: linux/amd64
     image: ghcr.io/miajohansson9/meld-rag-api:latest
     environment:
       - DB_HOST=vectordb
