--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-scroll-area": "^1.2.9"
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "react-confetti": "^6.4.0"
   }
 }
